--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@
 site_name: Web Client Documentation
 nav:
   - Home: index.md
-  - Getting starged: getting-started.md
+  - Getting started: getting-started.md
   - Map: module-map.md
   - Administration: module-administration.md
 
