--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,6 +18,7 @@ nav:
   - Points Of Interest: poi.md
   - Users: users.md
   - Alerts: viewing-alerts.md
+  - Test Sub Groups: AA-Example-Code.md
   
 # copyright
 copyright: 'Copyright &copy; 2019 Fonix Telematics Ltd'
